--- a/package.json
+++ b/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ""
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "babel-preset-react": "^6.11.1",
+    "babel-register": "^6.14.0",
+    "bootstrap": "^3.3.7",
+    "ejs": "^2.5.1",
+    "express": "^4.14.0",
+    "jquery": "^3.1.0",
+    "lodash": "^4.15.0",
+    "nodemon": "^1.10.2",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1"
   }
 }
