--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.15.0",
     "nodemon": "^1.10.2",
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "underscore": "^1.8.3"
   }
 }
