--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-shell": "^1.3.1",
     "jquery": "^3.1.0",
     "lodash": "^4.15.0",
     "nodemon": "^1.10.2",
     "react": "^15.3.1",
+    "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.1",
     "underscore": "^1.8.3"
   }
